--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-lazyload": "^2.6.1",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.32.2",
